--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Library"/>
-	<classpathentry kind="lib" path="/Users/chris/Documents/workspace/RiftDK2SensorLogger/jovr-0.4.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/chris/Documents/workspace/RiftDK2SensorLogger/jovr-0.4.1.1.jar" sourcepath="/Users/chris/Documents/workspace/RiftDK2SensorLogger/jovr-0.4.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/chris/Documents/workspace/RiftDK2SensorLogger/jna-4.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
